# archon

./: .env.example  .gitignore  DESIGN.md  README.md  REQUIREMENTS.md  pyproject.toml
archon/: __init__.py  access.py  agent.py  audit.py  config.py  exceptions.py  hooks.py  observer.py  orchestrator.py  retry.py  session.py  state.py  tools.py  types.py
archon/llm/: __init__.py  _base.py  anthropic.py  gemini.py  openai.py
archon/mcp/: __init__.py  client.py
archon/observability/: __init__.py  audit.py  observer.py
archon/safety/: __init__.py  guardrails.py  hitl.py
examples/: weather_agent.py
tests/: conftest.py  live_test_results.md  test_agent.py  test_guardrails.py  test_mcp.py  test_orchestrator.py  test_parallel_tools.py  test_prompt_caching.py  test_retry.py  test_state.py  test_streaming.py  test_structured_output.py  test_tools.py
