[tool.poetry]
name = "archon"
version = "0.1.0"
description = "Minimal enterprise agent framework built on LiteLLM"
authors = ["mchen"]
readme = "README.md"
packages = [{include = "archon"}]

[tool.poetry.dependencies]
python = "^3.12"
litellm = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
